--- a/Mardi Gras End Project/html/contact.html
+++ b/Mardi Gras End Project/html/contact.html
@@ -10,8 +10,12 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="/css/media.css">
+  <link rel="stylesheet" href="/css/contact.css">
   <link rel="icon" type="image/x-icon" href="/images/main_Images/Logo.png">
+
+  <style>
+
+  </style>
   <title>Mardi Gras 2022</title>
 </head>
 
@@ -59,7 +63,7 @@
                   <a class="nav-link" href="/html/faq.html">FAQ</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/html/contact.html">Contact</a>
+                  <a class="nav-link" href="/contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/html/quiz.html">HTML CSS Quiz</a>
@@ -76,71 +80,33 @@
     </header>
 
     <main>
-      <div class="row spinning_Cards">
-        <figure class="icon-cards mt-3">
-          <div class="icon-cards__content">
-            <div class="icon-cards__item d-flex align-items-center justify-content-center"><span class="h1"><img
-                  src="/images/media_page/dance.jpg" class="img-fluid" alt="dance"></span>
-            </div>
-            <div class="icon-cards__item d-flex align-items-center justify-content-center"><span class="h1"><img
-                  src="/images/media_page/colors.jpg" class="img-fluid" alt="colors"></span>
-            </div>
-            <div class="icon-cards__item d-flex align-items-center justify-content-center"><span class="h1"><img
-                  src="/images/media_page/boat.jpg" class="img-fluid" alt="boat"></span>
-            </div>
+      <div class="contact_Container">
+        <div class="contact-box">
+          <div class="left"></div>
+          <div class="right">
+            <h2>Contact Us</h2>
+            <label for="firstName">First Name:</label>
+            <input type="text" class="field" placeholder="First Name" id="first_Name" />
+            <label for="lastName">Last Name:</label>
+            <input type="text" class="field" placeholder="Last Name" id="last_Name" />
+            <label for="email">Email:</label>
+            <input type="email" class="field" placeholder="Your email" id="email" />
+            <label for="message">Message:</label>
+            <textarea class="field area" placeholder="Message"></textarea>
+            <button class="btn btn-primary" id="btn">Send Message</button>
           </div>
-        </figure>
-      </div>
-      <div class="move_Fast">
-        <h4>
-          Go to <a href="#images"> Images</a> /
-          <a href="#videos"> Videos</a>
-        </h4>
-      </div>
-      <div class="row" id="images">
-        <h2>Images</h2>
-        <div class="first_Img_Row">
-          <img src="/images/media_page/carnaval.jpg" class="card-img-top img-fluid" alt="carnival">
-          <img src="/images/media_page/chiar.jpg" class="card-img-top img-fluid" alt="chairs">
-          <img src="/images/media_page/dounat.jpg" class="card-img-top img-fluid" alt="donut">
-          <img src="/images/media_page/gay.jpg" class="card-img-top img-fluid" alt="gay parade">
-          <img src="/images/media_page/green.jpg" class="card-img-top img-fluid" alt="green costume">
-        </div>
-        <div class="second_Img_Row">
-          <img src="/images/media_page/mardi_Gras.jpg" class="card-img-top img-fluid" alt="mardi_Gras">
-          <img src="/images/media_page/mask.jpg" class="card-img-top img-fluid" alt="mask">
-          <img src="/images/media_page/Masks.jpg" class="card-img-top img-fluid" alt="mask">
-          <img src="/images/media_page/face_Mask.jpg" class="card-img-top img-fluid" alt="face mask">
-        </div>
-        <div class="third_Img_Row">
-          <img src="/images/media_page/parade.jpg" class="card-img-top img-fluid" alt="parade">
-          <img src="/images/media_page/party.jpg" class="card-img-top img-fluid" alt="party">
-          <img src="/images/media_page/store.jpg" class="card-img-top img-fluid" alt="store">
-          <img src="/images/media_page/mask3.jpg" class="card-img-top img-fluid" alt="mask">
-          <img src="/images/media_page/umbrella.jpg" class="card-img-top img-fluid" alt="umbrella">
         </div>
       </div>
-
-      <div class=" row" id="videos">
-        <h2>Videos</h2>
-        <div class="video_Row">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/EkIZwXbSh-Y" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/KlgrhGyhmG8" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/x5VJe_XIuhM?" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+      <div class="about_Us">
+        <h2>About Us</h2>
+        <div class="map_Email">
+          <p>For press inquiries, please contact press@mardigrasneworleans.com. <br> For all other questions, please use
+            the
+            form below.</p>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d221064.11608350044!2d-90.02264686085793!3d30.03321949193944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8620a454b2118265%3A0xdb065be85e22d3b4!2sNew%20Orleans%2C%20LA%2C%20USA!5e0!3m2!1sen!2sil!4v1644320308458!5m2!1sen!2sil"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
-      </div>
-      <div class="back_to_top">
-
-        <a href="#"><img src="/Mardi Gras End Project/images/toppng.com-arrow-up-black-up-arrow-323x700.png" alt=""></a>
       </div>
     </main>
 
@@ -169,7 +135,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
   </script>
-  <script src="/js/media.js"></script>
+  <script src="/js/contact.js"></script>
 </body>
 
 </html>
