--- a/Mardi Gras End Project/html/index.html
+++ b/Mardi Gras End Project/html/index.html
@@ -175,7 +175,7 @@
         </div>
         <div class="col">
           <div class="card" style="width: 18rem;">
-            <img src="../images/index_page/hotel.png" class="card-img-top" alt="Sharton Hotel">
+            <img src="../images/index_page/hotel.png" class="card-img-top" alt="Sheraton Hotel">
             <div class="card-body">
               <a href="#popup2" class="btn btn-primary">Learn More</a>
             </div>
