--- a/Mardi Gras End Project/html/contact.html
+++ b/Mardi Gras End Project/html/contact.html
@@ -102,7 +102,7 @@
         <div class="map_Email">
           <p>For press inquiries, please contact press@mardigrasneworleans.com. <br> For all other questions, please use
             the
-            form below.</p>
+            form above.</p>
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d221064.11608350044!2d-90.02264686085793!3d30.03321949193944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8620a454b2118265%3A0xdb065be85e22d3b4!2sNew%20Orleans%2C%20LA%2C%20USA!5e0!3m2!1sen!2sil!4v1644320308458!5m2!1sen!2sil"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
