--- a/Mardi Gras End Project/html/contact.html
+++ b/Mardi Gras End Project/html/contact.html
@@ -63,7 +63,7 @@
                   <a class="nav-link" href="/html/faq.html">FAQ</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/contact.html">Contact</a>
+                  <a class="nav-link" href="/html/contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/html/quiz.html">HTML CSS Quiz</a>
