--- a/Mardi Gras End Project/html/index.html
+++ b/Mardi Gras End Project/html/index.html
@@ -100,40 +100,41 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
+              <img src="../images/index_page/dounat.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h3>Mardi Gras Festival</h3>
+                <p>A lovely mask and even better looking donut</p>
+              </div>
+            </div>
+            <div class="carousel-item ">
               <img src="../images/index_page/mardi_Gras.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h3>Mardi Gras Festival</h3>
-                <p>Some representative placeholder content for the first slide.</p>
+                <p>Mardi Gras Mask</p>
               </div>
             </div>
             <div class="carousel-item">
               <img src="../images/index_page/Masks.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h3>Mardi Gras Festival</h3>
-                <p>Some representative placeholder content for the second slide.</p>
+                <p>SA beautiful Mardi Gras store with a lot of different masks</p>
               </div>
             </div>
             <div class="carousel-item">
               <img src="../images/index_page/party.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                <h3>Third slide label</h3>
-                <p>Some representative placeholder content for the third slide.</p>
+                <h3>Mardi Gras Festival</h3>
+                <p>Come and be like her!!! </p>
               </div>
             </div>
             <div class="carousel-item">
               <img src="../images/index_page/chiar.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                <h3>Third slide label</h3>
-                <p>Some representative placeholder content for the third slide.</p>
+                <h3>Mardi Gras Festival</h3>
+                <p>Beautiful colors to represent the beautiful Festival </p>
               </div>
             </div>
-            <div class="carousel-item">
-              <img src="../images/index_page/dounat.jpg" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h3>Third slide label</h3>
-                <p>Some representative placeholder content for the third slide.</p>
-              </div>
-            </div>
+
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
             data-bs-slide="prev">
